--- a/frontend-js/index.html
+++ b/frontend-js/index.html
@@ -1,30 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lista de Produtos</title>  
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
+  <title>Consumindo API com Axios</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
 </head>
 <body>
-<div class="d-flex align-items-center justify-content-center">
-  <div class="overflow-auto" style="height: 400px">
-    <div class="overflow-auto mt-3" id="card-container">
-    <span> Os registros vão aparecer abaixo</span>
-      <!-- Cards serão adicionados dinamicamente aqui -->
-    </div>
-  </div>
-</div>
 
- <script>
-    displayProducts();
-  </script>
+  <h1 class="mt-5 text-center">Consumindo API com Axios</h1>
   
- <script src="../produto.service.js"></script>
-  <script src="../produto.controller.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSGFpoO/+écxonRAsgiUzA3IKINREE5pJ0kv7iVIqMGtoMmW88" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoJtKh7z7lGz7fuP4F8nfdFvAOA6Gg/z6SOgPzslU_opcodeXcpj" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-MFRQNZZHHRS/XCJKhrwJIybxDAxFFFFFF330QV86៬N" crossorigin="anonymous"></script>
+  <div id="response" class="container mt-5"></div>
+
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', getData);
+
+    function getData() {
+
+      axios.get('http://localhost:3000/produto')
+        .then(response => {
+          const responseData = response.data;
+          const responseElement = document.getElementById('response');
+          responseElement.innerHTML = '';
+
+          responseData.forEach(item => {
+            const card = document.createElement('div');
+            card.classList.add('card', 'mb-3');
+
+            const cardBody = document.createElement('div');
+            cardBody.classList.add('card-body');
+
+            const name = document.createElement('h5');
+            name.classList.add('card-title');
+            name.textContent = item.nome;
+
+            const price = document.createElement('p');
+            price.classList.add('card-text');
+            price.textContent = `Preço: R$ ${item.preco}`;
+
+            const description = document.createElement('p');
+            description.classList.add('card-text');
+            description.textContent = item.descricao;
+
+            cardBody.appendChild(name);
+            cardBody.appendChild(price);
+            cardBody.appendChild(description);
+
+            card.appendChild(cardBody);
+
+            responseElement.appendChild(card);
+          });
+        })
+        .catch(error => {
+          console.error('Erro ao fazer a requisição:', error);
+        });
+    }
+  </script>
 </body>
 </html>
